test/corpus/let-binding.txt
==================
let binding
==================

#lang racket
(let ((x 1))
  x)
(let ([x 1])
  x)

---

(source_file
  (language (identifier))
  (let (binding (identifier) (number))
    (body (identifier)))
  (let (binding (identifier) (number))
    (body (identifier))))
